# lidar_manipulator

./: CMakeLists.txt  README.md  package.xml
config/: lidar_manipulator.rviz
launch/: lidar_accumulator.launch  lidar_manipulator.launch
msg/: LidarData.msg
src/: lidar_accumulator_node.cpp  lidar_manipulator_node.cpp
