<?xml version="1.0"?>
<package format="2">
  <name>lidar_manipulator</name>
  <version>0.0.1</version>
  <description>The lidar manipulator package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
  </export>
</package>
